--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "ts-node src/server.ts"
   },
   "dependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.14.7",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
