--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
